# crewpay

./: .gitignore  .pylintrc  README.md  noxfile.py  pinned-versions.txt  pyproject.toml  setup.cfg
src/: manage.py
src/api/v1/: urls.py  views.py
src/api/v1/crewplanner/: dto.py  dto_cp_ShiftsByUser.py  dto_cp_employee.py  dto_cp_report.py  dto_cp_shift.py  employees.py  endpoints.py  report.py
src/api/v1/staffology/: API_employees.py  API_employers.py  date_handeling.py  dto.py  dto_so_employee.py  dto_so_employer.py  dto_so_pay_options_import.py  employee_formatting.py  employee_handling.py  (+6 more)
src/crewpay/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
src/crewpay/migrations/: 0002_alter_crewplanneruser_user_staffologyuser.py  0003_alter_crewplanneruser_user_alter_staffologyuser_user.py  0004_employer.py  0007_employee_status.py  0010_invalidemployee_name.py  0011_alter_invalidemployee_employer.py  0012_employer_pay_period_alter_invalidemployee_employer.py  0013_invalidshift.py  0014_employee_payrollcode.py  0018_remove_employee_payroll_code_and_more.py  0019_remove_employer_pay_period.py
src/local_dbs/: db.sqlite3
src/templates/base/: base.html  navbar.html
src/templates/logged_in/: contact.html  onboard.html  root.html  settings.html  token.html  user_created.html
src/templates/not_logged_in/: login.html
src_staffology/: manage.py
src_staffology/api/v1/: urls.py
src_staffology/crewpay/: _version.py  admin.py  asgi.py  forms.py  settings.py
src_staffology/crewpay/migrations/: 0001_initial.py  0005_employees.py  0006_rename_employees_employee.py  0008_alter_employee_status.py  0009_invalidemployee.py  0011_alter_invalidemployee_employer.py  0012_employer_pay_period_alter_invalidemployee_employer.py  0015_rename_payrollcode_employee_payroll_code.py  0016_alter_employee_payroll_code.py  0017_employee_payload_hash.py
src_staffology/templates/base/: base_logged_in.html  navbar.html
src_staffology/templates/logged_in/: about.html  root.html  sync.html
src_staffology/templates/not_logged_in/: root.html
tests/: conftest.py  test_date_handeling.py  test_employees_cp.py  test_employees_so.py  test_report.py
tests/data/: address_error_cp.json  cp_example_employees.json  cp_example_report.json  details_error_cp.json  lisa_hunt.json  so_employee_payload.json
tests/integration/: test_crewplanner_api_employee.py  test_shape_api_employee.py
tests/unit/: test_crewplanner_api.py  test_crewplanner_employee_functions.py  test_shape_api.py
tests_staffology/: test_employees_so.py  test_payroll_manager.py
tests_staffology/data/: lisa_hunt.json
tests_staffology/scripts/: append names.csv.txt  deleatedupes.py  fire_sync.py  firedupe.csv  fireupload.csv  people_to_update.csv
(+38 files in other folders)
