[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/crewpay/_version.py"

[tool.black]
line-length = 120
# Keep this in sync with ISORT_SOURCE_PATHS variable in noxfile.py.
include = 'src/.*\.pyi?$'

[tool.isort]
profile = "black"
known_first_party = "src"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
DJANGO_SETTINGS_MODULE = "crewpay.settings"

[tool.django-stubs]
django_settings_module = "crewpay.settings"

[tool.mypy]
# paths
cache_dir = ".cache/mypy_cache"
files = [
    'src/',
    'tests/',
    'noxfile.py',
]
# Make mypy work properly with namespace package:
# ( https://mypy.readthedocs.io/en/stable/running_mypy.html#mapping-paths-to-modules )
mypy_path = 'src'
exclude = "src/vcdb_api/migrations"
namespace_packages = true
explicit_package_bases = true
# General settings
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
strict_optional = true