[metadata]
name = crewpay

[options]
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    python-environ
    django
    requests
    djangorestframework
    pydantic
    dateutil
    dataclasses
    markupsafe

[options.extras_require]
linting =
    pylint
    pylint-django
    pylint-pydantic

typing =
    mypy

tests =
    pytest
    pytest-django

dev =
    nox