[metadata]
name = crewpay

[options]
packages = find_namespace:
python_requires = >= 3.10
install_requires =
    python-environ
    django
    requests
    djangorestframework
    pydantic
    dataclasses
    markupsafe

[options.extras_require]
linting =
    nox # (allow linting of noxfile)
    pylint
    pylint-django
    pylint-pydantic

typing =
    mypy
    django-stubs
    django-types
    types-requests

tests =
    pytest
    pytest-django

dev =
    nox
    crewpay[linting,tests,typing]